# src/docs/swagger.yaml
@@ -86,13 +86,13 @@ tags:
   - name: JWT
   - name: Webhook
 paths:
-  /instance/qrcode/{instanceName}:
+  /instance/qrcode/{codigodopedido}:
     get:
       tags:
         - Instance Controller > Views
       summary: QrCode
       parameters:
-        - name: instanceName
+        - name: codigodopedido
           in: path
           description: Name of the instance for which the QR Code needs to be fetched.
           required: true
@@ -115,11 +115,11 @@ paths:
             schema:
               type: object
               properties:
-                instanceName:
+                codigodopedido:
                   type: string
                   description: Name of the instance (optional).
               example:
-                instanceName: 'exampleInstance'
+                codigodopedido: 'exampleInstance'
       security:
         - apikeyAuth: []
       responses:
@@ -135,7 +135,7 @@ paths:
       security:
         - apikeyAuth: []
       parameters:
-        - name: instanceName
+        - name: codigodopedido
           in: query
           schema:
             type: string
@@ -154,7 +154,7 @@ paths:
                     instance:
                       type: object
                       properties:
-                        instanceName:
+                        codigodopedido:
                           type: string
                         owner:
                           type: string
@@ -167,13 +167,13 @@ paths:
                       properties:
                         jwt:
                           type: string
-  /instance/connect/{instanceName}:
+  /instance/connect/{codigodopedido}:
     get:
       tags:
         - Instance Controller
       summary: Instance Connect
       parameters:
-        - name: instanceName
+        - name: codigodopedido
           in: path
           required: true
           schema:
@@ -193,13 +193,13 @@ paths:
                   base64:
                     type: string
                     description: The QR Code as a string.
-  /instance/reload/{instanceName}:
+  /instance/reload/{codigodopedido}:
     get:
       tags:
         - Instance Controller
       summary: Instance Reload
       parameters:
-        - name: instanceName
+        - name: codigodopedido
           in: path
           required: true
           schema:
@@ -220,13 +220,13 @@ paths:
                     type: string
                   statusReason:
                     type: string
-  /instance/connectionState/{instanceName}:
+  /instance/connectionState/{codigodopedido}:
     get:
       tags:
         - Instance Controller
       summary: Connection Status
       parameters:
-        - name: instanceName
+        - name: codigodopedido
           in: path
           required: true
           schema:
@@ -238,13 +238,13 @@ paths:
           description: Successful response
           content:
             application/json: {}
-  /instance/logout/{instanceName}:
+  /instance/logout/{codigodopedido}:
     delete:
       tags:
         - Instance Controller
       summary: Logout Instance
       parameters:
-        - name: instanceName
+        - name: codigodopedido
           in: path
           required: true
           schema:
@@ -256,13 +256,13 @@ paths:
           description: Successful response
           content:
             application/json: {}
-  /instance/delete/{instanceName}:
+  /instance/delete/{codigodopedido}:
     delete:
       tags:
         - Instance Controller
       summary: Delete Instance
       parameters:
-        - name: instanceName
+        - name: codigodopedido
           in: path
           required: true
           schema:
@@ -275,7 +275,7 @@ paths:
           content:
             application/json: {}
 
-  /message/sendText/{instanceName}:
+  /message/sendText/{codigodopedido}:
     post:
       tags:
         - Send Message Controller
@@ -312,7 +312,7 @@ paths:
                 - number
                 - textMessage
       parameters:
-        - name: instanceName
+        - name: codigodopedido
           in: path
           required: true
           schema:
@@ -324,7 +324,7 @@ paths:
           description: Successful response
           content:
             application/json: {}
-  /message/sendMedia/{instanceName}:
+  /message/sendMedia/{codigodopedido}:
     post:
       tags:
         - Send Message Controller
@@ -370,7 +370,7 @@ paths:
                       enum: ['composing', 'recording', 'paused']
                       description: Indicates the sender's action/status.
       parameters:
-        - name: instanceName
+        - name: codigodopedido
           in: path
           required: true
           schema:
@@ -382,7 +382,7 @@ paths:
           description: Successful response
           content:
             application/json: {}
-  /message/sendMediaFile/{instanceName}:
+  /message/sendMediaFile/{codigodopedido}:
     post:
       tags:
         - Send Message Controller
@@ -421,7 +421,7 @@ paths:
                 - attachment
                 - mediatype
       parameters:
-        - name: instanceName
+        - name: codigodopedido
           in: path
           required: true
           schema:
@@ -433,7 +433,7 @@ paths:
           description: Successful response
           content:
             application/json: {}
-  /message/sendLocation/{instanceName}:
+  /message/sendLocation/{codigodopedido}:
     post:
       tags:
         - Send Message Controller
@@ -482,7 +482,7 @@ paths:
                 - locationMessage.latitude
                 - locationMessage.longitude
       parameters:
-        - name: instanceName
+        - name: codigodopedido
           in: path
           required: true
           schema:
@@ -494,7 +494,7 @@ paths:
           description: Successful response
           content:
             application/json: {}
-  /message/sendContact/{instanceName}:
+  /message/sendContact/{codigodopedido}:
     post:
       tags:
         - Send Message Controller
@@ -542,7 +542,7 @@ paths:
               required:
                 - number
       parameters:
-        - name: instanceName
+        - name: codigodopedido
           in: path
           required: true
           schema:
@@ -554,7 +554,7 @@ paths:
           description: Successful response
           content:
             application/json: {}
-  /message/sendReaction/{instanceName}:
+  /message/sendReaction/{codigodopedido}:
     post:
       tags:
         - Send Message Controller
@@ -592,7 +592,7 @@ paths:
                     - key.id
                     - reaction
       parameters:
-        - name: instanceName
+        - name: codigodopedido
           in: path
           required: true
           schema:
@@ -604,7 +604,7 @@ paths:
           description: Successful response
           content:
             application/json: {}
-  /message/sendWhatsAppAudio/{instanceName}:
+  /message/sendWhatsAppAudio/{codigodopedido}:
     post:
       tags:
         - Send Message Controller
@@ -639,7 +639,7 @@ paths:
                 - number
                 - audioMessage.audio
       parameters:
-        - name: instanceName
+        - name: codigodopedido
           in: path
           required: true
           schema:
@@ -651,7 +651,7 @@ paths:
           description: Successful response
           content:
             application/json: {}
-  /message/sendWhatsAppAudioFile/{instanceName}:
+  /message/sendWhatsAppAudioFile/{codigodopedido}:
     post:
       tags:
         - Send Message Controller
@@ -680,7 +680,7 @@ paths:
                 - number
                 - attachment
       parameters:
-        - name: instanceName
+        - name: codigodopedido
           in: path
           required: true
           schema:
@@ -693,7 +693,7 @@ paths:
           content:
             application/json: {}
 
-  /chat/whatsappNumbers/{instanceName}:
+  /chat/whatsappNumbers/{codigodopedido}:
     post:
       tags:
         - Chat Controller
@@ -716,7 +716,7 @@ paths:
               required:
                 - numbers
       parameters:
-        - name: instanceName
+        - name: codigodopedido
           in: path
           required: true
           schema:
@@ -728,7 +728,7 @@ paths:
           description: Successful response
           content:
             application/json: {}
-  /chat/markMessageAsRead/{instanceName}:
+  /chat/markMessageAsRead/{codigodopedido}:
     put:
       tags:
         - Chat Controller
@@ -762,7 +762,7 @@ paths:
               required:
                 - readMessages
       parameters:
-        - name: instanceName
+        - name: codigodopedido
           in: path
           required: true
           schema:
@@ -774,7 +774,7 @@ paths:
           description: Successful response
           content:
             application/json: {}
-  /chat/archiveChat/{instanceName}:
+  /chat/archiveChat/{codigodopedido}:
     put:
       tags:
         - Chat Controller
@@ -814,7 +814,7 @@ paths:
                 - lastMessage
                 - archive
       parameters:
-        - name: instanceName
+        - name: codigodopedido
           in: path
           required: true
           schema:
@@ -826,14 +826,14 @@ paths:
           description: Successful response
           content:
             application/json: {}
-  /chat/deleteMessageForEveryone/{instanceName}:
+  /chat/deleteMessageForEveryone/{codigodopedido}:
     delete:
       tags:
         - Chat Controller
       summary: Delete a message for everyone in a given instance.
       description: This endpoint allows users to delete a message for everyone in the chat.
       parameters:
-        - name: instanceName
+        - name: codigodopedido
           in: path
           required: true
           schema:
@@ -845,7 +845,7 @@ paths:
           description: Successful response
           content:
             application/json: {}
-  /chat/fetchProfilePictureUrl/{instanceName}:
+  /chat/fetchProfilePictureUrl/{codigodopedido}:
     post:
       tags:
         - Chat Controller
@@ -864,7 +864,7 @@ paths:
               required:
                 - number
       parameters:
-        - name: instanceName
+        - name: codigodopedido
           in: path
           required: true
           schema:
@@ -876,7 +876,7 @@ paths:
           description: Successful response
           content:
             application/json: {}
-  /chat/findContacts/{instanceName}:
+  /chat/findContacts/{codigodopedido}:
     post:
       tags:
         - Chat Controller
@@ -897,7 +897,7 @@ paths:
                   required:
                     - id
       parameters:
-        - name: instanceName
+        - name: codigodopedido
           in: path
           required: true
           schema:
@@ -909,7 +909,7 @@ paths:
           description: Successful response
           content:
             application/json: {}
-  /chat/getBase64FromMediaMessage/{instanceName}:
+  /chat/getBase64FromMediaMessage/{codigodopedido}:
     post:
       tags:
         - Chat Controller
@@ -931,7 +931,7 @@ paths:
                   required:
                     - id
       parameters:
-        - name: instanceName
+        - name: codigodopedido
           in: path
           required: true
           schema:
@@ -943,7 +943,7 @@ paths:
           description: Successful response
           content:
             application/json: {}
-  /chat/retrieverMediaMessage/{instanceName}:
+  /chat/retrieverMediaMessage/{codigodopedido}:
     post:
       tags:
         - Chat Controller
@@ -964,7 +964,7 @@ paths:
                   required:
                     - id
       parameters:
-        - name: instanceName
+        - name: codigodopedido
           in: path
           required: true
           schema:
@@ -976,7 +976,7 @@ paths:
           description: Successful response
           content:
             application/octet-stream: {}
-  /chat/findMessages/{instanceName}:
+  /chat/findMessages/{codigodopedido}:
     post:
       tags:
         - Chat Controller
@@ -1015,7 +1015,7 @@ paths:
                   type: integer
                   description: Maximum number of messages to retrieve.
       parameters:
-        - name: instanceName
+        - name: codigodopedido
           in: path
           required: true
           schema:
@@ -1027,7 +1027,7 @@ paths:
           description: Successful response
           content:
             application/json: {}
-  /chat/findStatusMessage/{instanceName}:
+  /chat/findStatusMessage/{codigodopedido}:
     post:
       tags:
         - Chat Controller
@@ -1048,7 +1048,7 @@ paths:
                   required:
                     - id
       parameters:
-        - name: instanceName
+        - name: codigodopedido
           in: path
           required: true
           schema:
@@ -1060,14 +1060,14 @@ paths:
           description: Successful response
           content:
             application/json: {}
-  /chat/findChats/{instanceName}:
+  /chat/findChats/{codigodopedido}:
     get:
       tags:
         - Chat Controller
       summary: List all chats associated with a specific instance.
       description: This endpoint retrieves a list of all chats associated with the specified instance.
       parameters:
-        - name: instanceName
+        - name: codigodopedido
           in: path
           required: true
           schema:
@@ -1080,7 +1080,7 @@ paths:
           content:
             application/json: {}
 
-  /group/create/{instanceName}:
+  /group/create/{codigodopedido}:
     post:
       tags:
         - Group Controller
@@ -1104,7 +1104,7 @@ paths:
                     type: string
                   description: '- required - List of participant phone numbers.'
       parameters:
-        - name: instanceName
+        - name: codigodopedido
           in: path
           schema:
             type: string
@@ -1116,7 +1116,7 @@ paths:
           description: Successful response
           content:
             application/json: {}
-  /group/updateGroupPicture/{instanceName}:
+  /group/updateGroupPicture/{codigodopedido}:
     put:
       tags:
         - Group Controller
@@ -1138,7 +1138,7 @@ paths:
             type: string
           description: '- required - The unique identifier of the group.'
           example: '120363046555718472@g.us'
-        - name: instanceName
+        - name: codigodopedido
           in: path
           schema:
             type: string
@@ -1150,7 +1150,7 @@ paths:
           description: Successful response
           content:
             application/json: {}
-  /group/findGroupInfos/{instanceName}:
+  /group/findGroupInfos/{codigodopedido}:
     get:
       tags:
         - Group Controller
@@ -1162,7 +1162,7 @@ paths:
             type: string
           description: '- required - The unique identifier of the group.'
           example: '120363046555718472@g.us'
-        - name: instanceName
+        - name: codigodopedido
           in: path
           schema:
             type: string
@@ -1174,7 +1174,7 @@ paths:
           description: Successful response
           content:
             application/json: {}
-  /group/participants/{instanceName}:
+  /group/participants/{codigodopedido}:
     get:
       tags:
         - Group Controller
@@ -1186,7 +1186,7 @@ paths:
             type: string
           description: '- required - The unique identifier of the group.'
           example: '120363046555718472@g.us'
-        - name: instanceName
+        - name: codigodopedido
           in: path
           schema:
             type: string
@@ -1198,7 +1198,7 @@ paths:
           description: Successful response
           content:
             application/json: {}
-  /group/inviteCode/{instanceName}:
+  /group/inviteCode/{codigodopedido}:
     get:
       tags:
         - Group Controller
@@ -1210,7 +1210,7 @@ paths:
             type: string
           description: '- required - The unique identifier of the group.'
           example: '120363046555718472@g.us'
-        - name: instanceName
+        - name: codigodopedido
           in: path
           schema:
             type: string
@@ -1222,7 +1222,7 @@ paths:
           description: Successful response
           content:
             application/json: {}
-  /group/revokeInviteCode/{instanceName}:
+  /group/revokeInviteCode/{codigodopedido}:
     put:
       tags:
         - Group Controller
@@ -1236,7 +1236,7 @@ paths:
             type: string
           description: '- required - The unique identifier of the group.'
           example: '120363046555718472@g.us'
-        - name: instanceName
+        - name: codigodopedido
           in: path
           schema:
             type: string
@@ -1248,7 +1248,7 @@ paths:
           description: Successful response
           content:
             application/json: {}
-  /group/updateParticipant/{instanceName}:
+  /group/updateParticipant/{codigodopedido}:
     put:
       tags:
         - Group Controller
@@ -1270,7 +1270,7 @@ paths:
                     type: string
                   description: '- required - List of participant phone numbers to be updated.'
       parameters:
-        - name: instanceName
+        - name: codigodopedido
           in: path
           schema:
             type: string
@@ -1282,13 +1282,13 @@ paths:
           description: Successful response
           content:
             application/json: {}
-  /group/leaveGroup/{instanceName}:
+  /group/leaveGroup/{codigodopedido}:
     delete:
       tags:
         - Group Controller
       summary: Exit from the specified WhatsApp group.
       parameters:
-        - name: instanceName
+        - name: codigodopedido
           in: path
           schema:
             type: string
@@ -1322,7 +1322,7 @@ paths:
           content:
             application/json: {}
 
-  /webhook/set/{instanceName}:
+  /webhook/set/{codigodopedido}:
     post:
       tags:
         - Webhook
@@ -1342,7 +1342,7 @@ paths:
                   format: uri
                   description: 'The endpoint URL where the webhook data will be sent.'
       parameters:
-        - name: instanceName
+        - name: codigodopedido
           in: path
           schema:
             type: string
@@ -1354,13 +1354,13 @@ paths:
           description: Successful response
           content:
             application/json: {}
-  /webhook/find/{instanceName}:
+  /webhook/find/{codigodopedido}:
     get:
       tags:
         - Webhook
       summary: Retrieve the webhook settings for a specific instance.
       parameters:
-        - name: instanceName
+        - name: codigodopedido
           in: path
           schema:
             type: string
